tests/stdlib/bad/unknown_string_fn.hel
// @name unknown_string_fn
// @phase stdlib
// @expect error

import std.string

main = () : IO<()> {
    string.concat("a", "b")
}
